--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.3.0",
     "@firebase/auth": "^0.18.3",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.1",
     "rxjs": "7.5.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
